# SWIM

./: .gitattributes  .gitignore  Cargo.toml  LICENSE  Makefile  README.md  index.html  main-b7180a3febf27b30.js  main-b7180a3febf27b30_bg.wasm  main-d1c422d8a269eb6f.js  main-d1c422d8a269eb6f_bg.wasm  main-f6dca689917cc4d8.js  main-f6dca689917cc4d8_bg.wasm  ourspim-1795314966aa3b79.js  ourspim-3e75e27516634cf6.js  ourspim-3e75e27516634cf6_bg.wasm  ourspim-434fb378ba18b6ed.js  ourspim-434fb378ba18b6ed_bg.wasm  ourspim-fd4ee778f4d30de5.js  ourspim-fd4ee778f4d30de5_bg.wasm  rust-toolchain.toml  swim-12903ec992005391.js  swim-12903ec992005391_bg.wasm  swim-167b5e6fe1b791d2.js  swim-167b5e6fe1b791d2_bg.wasm  swim-1751b328ebac60d2.js  swim-1751b328ebac60d2_bg.wasm  swim-184dde98d3fddb6f.js  swim-184dde98d3fddb6f_bg.wasm  swim-18baf3c6c9c4fb43.js  swim-18baf3c6c9c4fb43_bg.wasm  swim-1bc8d3429ed1144b.js  swim-1bc8d3429ed1144b_bg.wasm  swim-1dc84b980f2e7e52.js  swim-1dc84b980f2e7e52_bg.wasm  swim-23530f6f46da3ba6.js  swim-23530f6f46da3ba6_bg.wasm  swim-25493e9ff894d288.js  swim-25493e9ff894d288_bg.wasm  swim-25dd71717d4d08ac.js  (+265 more)
.githooks/: pre-commit
.github/workflows/: check.yml  deploy.yml
doc/: crates.js  help.html  index.html  search-index.js  settings.html  source-files.js  src-files.js
doc/akin/: all.html  index.html  macro.akin!.html  macro.akin.html  sidebar-items.js
doc/anymap2/: all.html  enum.Entry.html  index.html  sidebar-items.js  struct.Map.html  struct.OccupiedEntry.html  struct.VacantEntry.html  type.AnyMap.html  type.SendSyncAnyMap.html
doc/bincode/: all.html  enum.ErrorKind.html  fn.config.html  fn.deserialize.html  fn.deserialize_from.html  fn.deserialize_from_custom.html  fn.serialize.html  fn.serialize_into.html  fn.serialized_size.html  index.html  sidebar-items.js  struct.Config.html  trait.BincodeRead.html  type.Error.html  type.Result.html
doc/boolinator/: all.html  index.html  sidebar-items.js  trait.Boolinator.html
doc/bounce/: all.html  attr.future_notion.html  derive.Atom.html  derive.Slice.html  enum.Deferred.html  fn.use_artifacts.html  fn.use_atom.html  fn.use_atom_setter.html  fn.use_atom_value.html  fn.use_future_notion_runner.html  fn.use_input_selector_value.html  fn.use_notion_applier.html  fn.use_selector_value.html  fn.use_slice.html  fn.use_slice_dispatch.html  fn.use_slice_value.html  index.html  sidebar-items.js  struct.Artifact.html  struct.ArtifactProps.html  struct.BounceRoot.html  struct.BounceRootProps.html  struct.BounceStates.html  struct.UseAtomHandle.html  struct.UseSliceHandle.html  trait.CloneAtom.html  trait.CloneSlice.html  trait.FutureNotion.html  trait.InputSelector.html  trait.Observed.html  trait.Selector.html  trait.WithNotion.html
doc/bounce_macros/: all.html  attr.future_notion.html  derive.Atom.html  derive.Slice.html  index.html  sidebar-items.js
doc/bumpalo/: all.html  enum.AllocOrInitError.html  index.html  struct.AllocErr.html  struct.Bump.html  struct.ChunkIter.html  (+1 more)
media/: datapath-full.drawio  datapath-riscv.drawio  datapath-simple.drawio
src/: agent.rs  emulation_core.rs  lib.rs  main.rs  parser.rs  shims.rs  tests.rs  ui.rs
static/: example.asm  temp.css  visual_datapath.css
(+5017 files in other folders)
