[package]
name = "swim"
version = "0.1.0"
edition = "2021"
rust-version = "1.67"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Emulation Core
strum = "0.24"
strum_macros = "0.24"

# UI
gloo = {version = "0.8.0", features = ["futures"]}
gloo-console = "0.2.3"
gloo-events = "0.1.2"
gloo-utils = "0.1.6"
js-sys = "0.3.61"
monaco = { git = "https://github.com/b0x-Cub3d/rust-monaco", rev = "9308815a23afb88904f52bf098487308c2e6d1f0", features = ["yew-components"]  }
stylist = {version = "0.12.0", features = ["yew", "parser"]}
wasm-bindgen = "0.2.83"
wasm-bindgen-futures = "0.4.33"
web-sys = {version = "0.3.60", features = ["CssStyleDeclaration", "Event", "HtmlCollection", "HtmlElement", "HtmlInputElement", "HtmlObjectElement", "SvgElement"]}
yew = {version = "0.20.0", features = ["csr"] }
yew-hooks = "0.2.0"
bounce = "0.5.0"
log = "0.4.17"

# Parser / Assembler
levenshtein = "1.0.5"

# Tests
akin = "0.4"