[package]
name = "swim"
version = "0.1.0"
edition = "2021"
rust-version = "1.73"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Emulation Core
strum = "0.24"
strum_macros = "0.24"

# UI
gloo = {version = "0.8.0", features = ["futures"]}
gloo-console = "0.2.3"
gloo-events = "0.1.2"
gloo-utils = "0.1.6"
js-sys = "0.3.61"
monaco = { git = "https://github.com/SWIM-ucf/rust-monaco", rev = "c9586e4af77131a15daf53e91e1ad5161a5265e8", features = ["yew-components"]  }
wasm-bindgen = "0.2.83"
wasm-bindgen-futures = "0.4.33"
web-sys = {version = "0.3.60", features = ["CssStyleDeclaration", "Event", "HtmlCollection", "HtmlElement", "HtmlInputElement", "HtmlObjectElement", "SvgElement", "CanvasRenderingContext2d", "Document", "HtmlCanvasElement", "EventTarget", "InputEvent", "ScrollLogicalPosition", "ScrollIntoViewOptions"]}
yew = {version = "0.20.0", features = ["csr"] }
yew-hooks = "0.2.0"
yew-agent = "0.3.0"
serde = "1.0.193"
futures = "0.3.29"

# Parser / Assembler
levenshtein = "1.0.5"

# Tests
akin = "0.4"

# Logging
cfg-if = "0.1"
log = "0.4"
console_log = { version = "1", features = ["color"] }
humantime = "2.1.0"
